Nav bar fix on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -11919,6 +11919,7 @@ section#contact a:hover {
 }
 
 @media (max-width: 991.98px) {
+  
   #about .row {
     flex-direction: column;
     align-items: center;
@@ -11928,6 +11929,14 @@ section#contact a:hover {
   #about .col-lg-8 {
     text-align: center;
   }
+
+    #mainNav .container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+
+}
 }
 
 @media (max-width: 767.98px) {
@@ -11951,4 +11960,5 @@ section#contact a:hover {
     font-size: 2rem;
   }
 }
+
 
